<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:isScrollContainer="true"
    tools:context=".Login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            app:cardBackgroundColor="@color/iosBlue"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/google_login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/iosBlue"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:cardCornerRadius="12dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/email"
                            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="8dp"
                            android:backgroundTint="@color/iosBlue"
                            android:ems="10"
                            android:hint="@string/e_mail"
                            android:inputType="textEmailAddress"
                            android:textAlignment="center"
                            android:textColor="@color/iosBlue"
                            android:textColorHint="@color/iosBlue"
                            android:visibility="visible"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="24dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    app:cardCornerRadius="12dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/password"
                            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="8dp"
                            android:backgroundTint="@color/iosBlue"
                            android:ems="10"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textAlignment="center"
                            android:textColor="@color/iosBlue"
                            android:textColorHint="@color/iosBlue"
                            android:visibility="visible"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/login_button"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_button_blue"
            android:backgroundTint="@color/iosBlue"
            android:elevation="8dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/google_login_button"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_button_blue"
            android:backgroundTint="@color/iosBlue"
            android:elevation="8dp"
            android:text="Sign in with Google"
            android:textColor="#FFFFFF"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/register_button"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:backgroundTint="#00FFFFFF"
            android:elevation="0dp"
            android:text="@string/sign_up"
            android:textColor="@color/iosBlue"
            android:textSize="10sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <view
            android:id="@+id/login_bar"
            class="com.airbnb.lottie.LottieAnimationView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_enableMergePathsForKitKatAndAbove="true"
            app:lottie_fileName="reg_ship.json" />

        <view
            android:id="@+id/space_stars"
            class="com.airbnb.lottie.LottieAnimationView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/login_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_enableMergePathsForKitKatAndAbove="true"
            app:lottie_fileName="reg_ship.json" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>